manifests/web-cluster/sdlc/helium/onboarding-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: onboarding-server
  name: onboarding-server
  namespace: helium
spec:
  selector:
    matchLabels:
      app: onboarding-server
  template:
    metadata:
      labels:
        app: onboarding-server
        security-group: rds-access
    spec:
      serviceAccountName: rds-web-user-access
      containers:
        - name: onboarding-server
          image: public.ecr.aws/v0j6k5v6/onboarding-server:0.0.68
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: onboarding-server
  namespace: helium
spec:
  ports:
    - port: 3002
      protocol: TCP
      targetPort: http
  selector:
    app: onboarding-server
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onboarding-server
  namespace: helium
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "1"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "3"
spec:
  ingressClassName: nginx
  rules:
    - host: onboarding.web.test-helium.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onboarding-server
                port:
                  number: 3002
